# django-rest-sample

./: .gitignore  pyproject.toml
app/config/: settings.py
